[package]
name = "trusted-proxies"
description = "A rust crate to extract http request information behind trusted proxies"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/redirectionio/trusted-proxies"

[features]
default = ["http"]
http = ["dep:http"]

[dependencies]
http = { version = "1.2.0", optional = true }
ipnet = "2.10.1"

[dev-dependencies]
rstest = "0.24.0"
httparse = "1.9.5"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"